build/classes/grammar.txt
<sentence> ::= <subject> <predicate> 
<subject> ::= <article> <noun> 
<predicate> ::= <verb> <direct-object> 
<direct-object> ::= <article> <noun> 
<article> ::= THE | A 
<noun> ::= MAN | DOG 
<verb> ::= BITES | PETS

https://github.com/mrthetkhine/RecursiveDecentParser
